Adjust theme colors for angular

--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -1,175 +1,181 @@
-@import '~@pxblue/colors/palette';
-@mixin darktheme($primary,$accent){
+@import "~@pxblue/colors/palette";
+@mixin darktheme($primary, $accent) {
+  /* Side navigation*/
+  .mat-drawer {
+    background-color: map-get($pxb-black, A700);
+  }
+  .mat-nav-list .mat-list-item:hover {
+    background-color: map-get($pxb-black, A200);
+  }
+  .mat-drawer-container {
+    background-color: map-get($pxb-black, A400);
+  }
 
-    /* Side navigation*/
-        .mat-drawer{
-            background-color: map-get($pxb-black, A700);
-        }
-        .mat-nav-list .mat-list-item:hover{
-            background-color: map-get($pxb-black, A200);
-        }
-        .mat-drawer-container{
-            background-color: map-get($pxb-black, A400);
-        }
+  /* toolbar*/
+  .mat-toolbar {
+    background-color: map-get($pxb-black, A200);
+    color: map-get($pxb-black, 100);
 
-    /* toolbar*/
-        .mat-toolbar {
-             background-color: map-get($pxb-black, A200);
-             color: map-get($pxb-black, 100);
+    &.mat-primary {
+      background-color: map-get($pxb-black, A700);
+      color: map-get($pxb-black, 50);
+    }
+    &.mat-accent {
+      background-color: map-get($pxb-black, A100);
+      color: map-get($pxb-black, 50);
+    }
+  }
 
-            &.mat-primary{
-                background-color: map-get($pxb-black, A700);
-                color:map-get($pxb-black, 50);
-            }
-            &.mat-accent{
-                background-color: map-get($pxb-black, A100);
-                color:map-get($pxb-black, 50);
-            }
-        }
+  /*tab bar*/
+  .mat-tab-group {
+    .mat-tab-header {
+      background-color: map-get($pxb-black, A200);
+    }
+    &.mat-primary .mat-tab-header {
+      background-color: map-get($pxb-black, A700);
+    }
+    &.mat-accent .mat-tab-header {
+      background-color: map-get($pxb-black, A100);
+    }
+  }
 
-    /*tab bar*/
-        .mat-tab-group{
-            .mat-tab-header{
-                background-color: map-get($pxb-black, A200);
-            }
-            &.mat-primary .mat-tab-header {
-                background-color: map-get($pxb-black, A700);
-            }
-            &.mat-accent .mat-tab-header{
-                background-color: map-get($pxb-black, A100);
-            }
-         }
+  /* tabbar link*/
+  .mat-tab-group.mat-primary.mat-background-primary .mat-ink-bar {
+    background-color: map-get($primary, 500);
+  }
+  .mat-tab-group .mat-ink-bar {
+    background-color: map-get($pxb-white, 50);
+  }
 
-    /* tabbar link*/
-        .mat-tab-group.mat-primary.mat-background-primary .mat-ink-bar{
-            background-color: map-get($primary, 500);
-        }
-        .mat-tab-group .mat-ink-bar{
-            background-color: map-get($pxb-white, 50);
-        }
+  /* button*/
+  .mat-stroked-button:not([disabled]) {
+    border-color: #c6cacc;
+    &.mat-primary {
+      border-color: map-get($primary, 500);
+    }
+    &.mat-accent {
+      border-color: map-get($accent, 500);
+    }
+  }
 
-    /* button*/
-        .mat-stroked-button:not([disabled]){
-            border-color:#c6cacc;
-                &.mat-primary{
-                    border-color:map-get($primary, 500);
-                }
-                &.mat-accent{
-                    border-color:map-get($accent, 500);
-                }
-        }
+  /*default button*/
+  .mat-raised-button {
+    background-color: map-get($pxb-black, 500);
+  }
 
-     /*default button*/
-        .mat-raised-button{
-            background-color: map-get($pxb-black, 500);
-        }
+  /*list item*/
+  .mat-list-item-content {
+    color: map-get($pxb-gray, 300);
+  }
 
-    /*list item*/
-        .mat-list-item-content{
-            color:map-get($pxb-gray, 300) ;
-        }
+  /*Body*/
+  .mat-drawer-content {
+    background-color: map-get($pxb-black, A200);
+    color: map-get($pxb-gray, 300);
+  }
 
-    /*Body*/
-        .mat-drawer-content{
-            background-color: map-get($pxb-black, A200);
-            color: map-get($pxb-gray, 300);
-        }
+  /* for the input forms fields */
+  .mat-form-field-appearance-fill .mat-form-field-flex {
+    background-color: map-get($pxb-black, 800);
+  }
+  .mat-form-field-appearance-legacy .mat-form-field-label,
+  .mat-form-field-label,
+  .mat-form-field-appearance-standard .mat-form-field-label {
+    color: map-get($pxb-gray, 300);
+  }
 
-    /* for the input forms fields */
-        .mat-form-field-appearance-fill .mat-form-field-flex{
-            background-color:map-get($pxb-black, 800);
-        }
-        .mat-form-field-appearance-legacy .mat-form-field-label,
-        .mat-form-field-label,
-        .mat-form-field-appearance-standard .mat-form-field-label{
-            color: map-get($pxb-gray, 300);
-        }
+  /* selection option*/
+  .mat-option.mat-selected:not(.mat-option-disabled) {
+    color: map-get($pxb-gray, 300);
+  }
+  .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
+    color: map-get($pxb-gray, 300);
+  }
+  .mat-accent .mat-option.mat-selected:not(.mat-option-disabled) {
+    color: map-get($pxb-gray, 300);
+  }
 
-    /* selection option*/
-        .mat-option.mat-selected:not(.mat-option-disabled){
-            color: map-get($pxb-gray, 300);
-        }
-        .mat-primary .mat-option.mat-selected:not(.mat-option-disabled){
-            color: map-get($pxb-gray, 300);
-        }
-        .mat-accent .mat-option.mat-selected:not(.mat-option-disabled){
-            color: map-get($pxb-gray, 300);
-        }
+  /* dropdown list*/
+  .mat-select-panel {
+    background-color: map-get($pxb-black, 900);
+    .mat-option {
+      color: map-get($pxb-gray, 300);
+    }
+  }
 
-    /* dropdown list*/
-        .mat-select-panel{
-            background-color: map-get($pxb-black, 900);
-            .mat-option{
-                color: map-get($pxb-gray, 300);
-            }
-        }
+  /* expansion panel*/
+  .mat-expansion-panel-header-description {
+    color: map-get($pxb-gray, 300);
+  }
 
-    /* expansion panel*/
-        .mat-expansion-panel-header-description{
-            color: map-get($pxb-gray, 300);
-        }
+  /* snackbar theming */
+  .mat-snack-bar-container {
+    background-color: map-get($pxb-black, A400);
+    color: white;
+  }
 
-    /* snackbar theming */
-        .mat-snack-bar-container{
-            background-color: map-get($pxb-black, A400);
-            color: white;
-        }
+  /* bottomsheet */
+  .mat-bottom-sheet-container {
+    background-color: map-get($pxb-black, 900);
+    .mat-list-item-content {
+      color: map-get($pxb-gray, 300);
+    }
+  }
 
-    /* bottomsheet */
-        .mat-bottom-sheet-container{
-            background-color: map-get($pxb-black, 900);
-            .mat-list-item-content{
-                color: map-get($pxb-gray, 300);
-            }
-        }
+  /* modal */
+  .mat-dialog-container {
+    background-color: map-get($pxb-black, 900);
+    color: map-get($pxb-gray, 300);
+  }
 
-    /* modal */
-        .mat-dialog-container{
-            background-color: map-get($pxb-black, 900);
-            color: map-get($pxb-gray, 300);
-        }
+  /*stepper*/
+  .mat-stepper-horizontal,
+  .mat-stepper-vertical {
+    background-color: map-get($pxb-black, 900);
+    color: map-get($pxb-gray, 100);
+  }
+  .mat-step-header {
+    .mat-step-label.mat-step-label-active {
+      color: map-get($pxb-gray, 300);
+    }
+    .mat-step-icon {
+      background-color: map-get($pxb-gray, 300);
+    }
+  }
 
-    /*stepper*/
-        .mat-stepper-horizontal, .mat-stepper-vertical{
-            background-color: map-get($pxb-black, 900);
-            color: map-get($pxb-gray, 100);
-        }
-        .mat-step-header {
-            .mat-step-label.mat-step-label-active{
-                color: map-get($pxb-gray, 300);
-            }
-            .mat-step-icon {
-                background-color: map-get($pxb-gray, 300);
-            }
-        }
+  /*chips*/
+  .mat-chip.mat-standard-chip {
+    background-color: map-get($pxb-black, 500);
+  }
 
-    /*chips*/
-        .mat-chip.mat-standard-chip{
-            background-color: map-get($pxb-black, 500);
-        }
+  /* Expansion Panel*/
+  .mat-expansion-panel {
+    background-color: map-get($pxb-black, 900);
+  }
+  .mat-expansion-panel-header-title {
+    color: map-get($pxb-gray, 300);
+  }
+  .mat-expansion-panel-header-description {
+    color: map-get($pxb-gray, 300);
+  }
 
-    /* Expansion Panel*/
-        .mat-expansion-panel {
-            background-color: map-get($pxb-black, 900);
-        }
-        .mat-expansion-panel-header-title {
-            color: map-get($pxb-gray, 300);
-        }
-        .mat-expansion-panel-header-description{
-            color: map-get($pxb-gray, 300);
-        }
+  /* table*/
+  .mat-table {
+    background-color: map-get($pxb-black, A200);
+  }
+  .mat-cell {
+    color: map-get($pxb-gray, 300);
+  }
 
-    /* table*/
-        .mat-table{
-            background-color: map-get($pxb-black, A200);
-        }
-        .mat-cell{
-            color: map-get($pxb-gray, 300);
-        }
+  /* paginator*/
+  .mat-paginator {
+    background-color: map-get($pxb-black, A200);
+    color: map-get($pxb-gray, 300);
+  }
 
-    /* paginator*/
-        .mat-paginator{
-            background-color: map-get($pxb-black, A200);
-            color: map-get($pxb-gray, 300);
-        }
+  /* Cards */
+  .mat-card {
+    background-color: map-get($pxb-black, 900);
+    color: map-get($pxb-gray, 300);
+  }
 }
