Add prettier and light/dark component theme

--- a/angular/_blueTheme.scss
+++ b/angular/_blueTheme.scss
@@ -59,4 +59,26 @@
             border-color: map-get($accent, 500);
         }
     }
+
+    /* PX Blue Components */
+    .pxb-scorecard {
+        .pxb-header {
+            background-color: map-get($primary, 500);
+            color: map-get($pxb-white, 50);
+            .mat-card-subtitle {
+                color: inherit;
+            }
+        }
+    }
+
+    .pxb-empty-state {
+        color: map-get($pxb-gray, 500);
+        .pxb-description {
+            color: map-get($primary, 500);
+        }
+    }
+
+    .pxb-channel-value {
+        color: map-get($pxb-gray, 800);
+    }
 }
