--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -1,4 +1,4 @@
-@import '~@pxblue/colors/palette';
+@import '../node_modules/@pxblue/colors/palette';
 @mixin darktheme($primary, $accent) {
     /* Side navigation*/
     .mat-drawer {
@@ -176,36 +176,6 @@
     /* Cards */
     .mat-card {
         background-color: map-get($pxb-black, 900);
-        color: map-get($pxb-gray, 300);
-    }
-
-    /* PX Blue Components */
-    .pxb-scorecard {
-        .pxb-header {
-            background-color: map-get($primary, 500);
-            color: map-get($pxb-white, 50);
-            .mat-card-subtitle {
-                color: inherit;
-            }
-        }
-    }
-
-    .pxb-hero {
-        color: map-get($pxb-gray, 300);
-        .pxb-primary-wrapper,
-        .pxb-channel-value-wrapper {
-            color: map-get($pxb-gray, 50);
-        }
-    }
-
-    .pxb-empty-state {
-        color: map-get($pxb-gray, 500);
-        .pxb-description {
-            color: map-get($primary, 500);
-        }
-    }
-
-    .pxb-channel-value {
         color: map-get($pxb-gray, 300);
     }
 }
