--- a/angular/_blueTheme.scss
+++ b/angular/_blueTheme.scss
@@ -1,4 +1,4 @@
-@import '../node_modules/@pxblue/colors/palette';
+@import '~@pxblue/colors/palette';
 @mixin bluetheme($primary, $accent) {
     /* toolbar*/
     .mat-toolbar {
