--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -1,4 +1,4 @@
-@import '../node_modules/@pxblue/colors/palette';
+@import '~@pxblue/colors/palette';
 @mixin darktheme($primary, $accent) {
     /* Side navigation*/
     .mat-drawer {
