--- a/angular/_darkTheme.scss
+++ b/angular/_darkTheme.scss
@@ -2,26 +2,26 @@
 @mixin darktheme($primary, $accent) {
     /* Side navigation*/
     .mat-drawer {
-        background-color: map-get($pxb-black, A700);
+        background-color: map-get($pxb-darkBlack, 900);
     }
     .mat-nav-list .mat-list-item:hover {
-        background-color: map-get($pxb-black, A200);
+        background-color: map-get($pxb-darkBlack, 100);
     }
     .mat-drawer-container {
-        background-color: map-get($pxb-black, A400);
+        background-color: map-get($pxb-darkBlack, 500);
     }
 
     /* toolbar*/
     .mat-toolbar {
-        background-color: map-get($pxb-black, A200);
+        background-color: map-get($pxb-darkBlack, 100);
         color: map-get($pxb-black, 100);
 
         &.mat-primary {
-            background-color: map-get($pxb-black, A700);
+            background-color: map-get($pxb-darkBlack, 900);
             color: map-get($pxb-black, 50);
         }
         &.mat-accent {
-            background-color: map-get($pxb-black, A100);
+            background-color: map-get($pxb-darkBlack, 400);
             color: map-get($pxb-black, 50);
         }
     }
@@ -29,13 +29,13 @@
     /*tab bar*/
     .mat-tab-group {
         .mat-tab-header {
-            background-color: map-get($pxb-black, A200);
+            background-color: map-get($pxb-darkBlack, 100);
         }
         &.mat-primary .mat-tab-header {
-            background-color: map-get($pxb-black, A700);
+            background-color: map-get($pxb-darkBlack, 900);
         }
         &.mat-accent .mat-tab-header {
-            background-color: map-get($pxb-black, A100);
+            background-color: map-get($pxb-darkBlack, 400);
         }
     }
 
@@ -70,7 +70,7 @@
 
     /*Body*/
     .mat-drawer-content {
-        background-color: map-get($pxb-black, A200);
+        background-color: map-get($pxb-darkBlack, 100);
         color: map-get($pxb-gray, 300);
     }
 
@@ -110,7 +110,7 @@
 
     /* snackbar theming */
     .mat-snack-bar-container {
-        background-color: map-get($pxb-black, A400);
+        background-color: map-get($pxb-darkBlack, 500);
         color: white;
     }
 
@@ -161,7 +161,7 @@
 
     /* table*/
     .mat-table {
-        background-color: map-get($pxb-black, A200);
+        background-color: map-get($pxb-darkBlack, 100);
     }
     .mat-cell {
         color: map-get($pxb-gray, 300);
@@ -169,7 +169,7 @@
 
     /* paginator*/
     .mat-paginator {
-        background-color: map-get($pxb-black, A200);
+        background-color: map-get($pxb-darkBlack, 100);
         color: map-get($pxb-gray, 300);
     }
 
