--- a/angular/_blueTheme.scss
+++ b/angular/_blueTheme.scss
@@ -1,9 +1,12 @@
 @import '~@pxblue/colors/palette';
+
 @mixin bluetheme($primary, $accent) {
+
     /* toolbar*/
     .mat-toolbar {
         background-color: map-get($pxb-gray, 50);
         color: map-get($pxb-black, 500);
+
         &.mat-accent {
             background-color: map-get($primary, 700);
         }
@@ -14,33 +17,41 @@
         .mat-tab-header {
             background-color: map-get($pxb-gray, 50);
         }
+
         &.mat-primary .mat-tab-header {
             background-color: map-get($primary, 500);
+
             .mat-tab-label,
             .mat-tab-link {
                 color: map-get($pxb-white, 50);
             }
         }
+
         &.mat-accent .mat-tab-header {
             background-color: map-get($primary, 700);
+
             .mat-tab-label,
             .mat-tab-link {
                 color: map-get($pxb-white, 50);
             }
         }
     }
+
     /* tabbar link*/
     .mat-tab-group.mat-primary .mat-ink-bar,
     .mat-tab-nav-bar.mat-primary .mat-ink-bar {
         background-color: map-get($pxb-white, 50);
     }
+
     .mat-tab-group.mat-accent .mat-ink-bar,
     .mat-tab-nav-bar.mat-accent .mat-ink-bar {
         background-color: map-get($pxb-white, 50);
     }
+
     .mat-tab-group .mat-ink-bar {
         background-color: map-get($primary, 500);
     }
+
     /* tab bar arrows*/
     .mat-primary,
     .mat-accent {
@@ -52,11 +63,45 @@
     /* button*/
     .mat-stroked-button:not([disabled]) {
         border-color: map-get($pxb-white, 50);
+
         &.mat-primary {
             border-color: map-get($primary, 500);
         }
+
         &.mat-accent {
             border-color: map-get($accent, 500);
+        }
+    }
+
+    .pxb-drawer {
+        background-color: #ffffff;
+
+        .pxb-drawer-subheader {
+            color: map-get($pxb-black, 500);
+        }
+
+        .pxb-drawer-nav-group .mat-list-base {
+            color: map-get($pxb-black, 500);
+        }
+
+        .pxb-drawer-nested-nav-item {
+            background-color: map-get($pxb-gray, 50);
+        }
+
+        .pxb-info-list-item .mat-list-item-content {
+            color: map-get($pxb-black, 500);
+        }
+
+        .pxb-info-list-item .mat-list-item-content:hover {
+            background-color: map-get($pxb-gray, 100);
+        }
+
+        .pxb-info-list-item-active .pxb-info-list-item .mat-list-item-content {
+            color: map-get($pxb-blue, 500);
+        }
+
+        .pxb-info-list-item-active:after {
+            background-color: map-get($pxb-blue, 50);
         }
     }
 }
