update active info list item background color

--- a/angular/pxb-component-theme.scss
+++ b/angular/pxb-component-theme.scss
@@ -101,7 +101,7 @@
         }
 
         .pxb-info-list-item-active:after {
-            background-color: map-get($pxb-blue, 50);
+            background-color: map-get($primary, 50);
         }
     }
 }
