--- a/angular/_typography.scss
+++ b/angular/_typography.scss
@@ -1,13 +1,36 @@
 @mixin typography() {
-  .mat-display-4, .mat-display-3, .mat-display-2 {
-    letter-spacing: 0;
-  }
 
-  .mat-overline {
-    font-size: 12px;
-    font-weight: 400;
-    letter-spacing: 2;
-    margin-bottom: 8px;
-    line-height: 2.66;
-  }
+    .mat-display-4,
+    .mat-display-3,
+    .mat-display-2 {
+        letter-spacing: 0;
+    }
+
+    .mat-display-4,
+    .mat-display-3,
+    .mat-display-2,
+    .mat-display-1,
+    .mat-headline,
+    .mat-title,
+    .mat-subheading-1,
+    .mat-subheading-2,
+    .mat-body-1,
+    .mat-body-2,
+    .mat-caption,
+    .mat-button {
+        margin-bottom: 0;
+    }
+
+    .mat-button {
+      text-transform: uppercase;
+    }
+
+    .mat-overline {
+        font-size: 12px;
+        font-weight: 400;
+        letter-spacing: 2px;
+        margin-bottom: 8px;
+        line-height: 2.66;
+        text-transform: uppercase;
+    }
 }
