Update Angular typography margins

--- a/angular/_margins.scss
+++ b/angular/_margins.scss
@@ -7,45 +7,45 @@
     .mat-h1,
     .mat-headline,
     #{$selector} h1 {
-        margin: 0 0 0.35em;
+        margin: 0 0 8px;
     }
     .mat-h2,
     .mat-title,
     #{$selector} h2 {
-        margin: 0 0 0.35em;
+        margin: 0 0 8px;
     }
     .mat-h3,
     .mat-subheading-2,
     #{$selector} h3 {
-        margin: 0 0 0.35em;
+        margin: 0 0 8px;
     }
     .mat-h4,
     .mat-subheading-1,
     #{$selector} h4 {
-        margin: 0 0 0.35em;
+        margin: 0 0 8px;
     }
     .mat-h5,
     #{$selector} h5 {
-        margin: 0 0 0.35em;
+        margin: 0 0 8px;
     }
     .mat-h6,
     #{$selector} h6 {
-        margin: 0 0 0.35em;
+        margin: 0 0 8px;
     }
     .mat-display-4,
     #{$selector} .mat-display-4 {
-        margin: 0 0 0.35em;
+        margin: 0 0 8px;
     }
     .mat-display-3,
     #{$selector} .mat-display-3 {
-        margin: 0 0 0.35em;
+        margin: 0 0 8px;
     }
     .mat-display-2,
     #{$selector} .mat-display-2 {
-        margin: 0 0 0.35em;
+        margin: 0 0 8px;
     }
     .mat-display-1,
     #{$selector} .mat-display-1 {
-        margin: 0 0 0.35em;
+        margin: 0 0 8px;
     }
 }
