--- a/angular/_typography.scss
+++ b/angular/_typography.scss
@@ -6,6 +6,21 @@
         letter-spacing: 0;
     }
 
+    .mat-display-4,
+    .mat-display-3,
+    .mat-display-2,
+    .mat-display-1,
+    .mat-headline,
+    .mat-title,
+    .mat-subheading-1,
+    .mat-subheading-2,
+    .mat-body-1,
+    .mat-body-2,
+    .mat-caption,
+    .mat-button {
+        margin-bottom: 0;
+    }
+
     .mat-button {
       text-transform: uppercase;
     }
