--- a/angular/pxb-component-theme.scss
+++ b/angular/pxb-component-theme.scss
@@ -81,24 +81,12 @@
             color: map-get($foreground, light);
         }
 
-        .pxb-drawer-subheader {
-            color: map-get($foreground, text);
-        }
-
         .pxb-drawer-nav-group .mat-list-base {
             color: map-get($foreground, text);
         }
 
-        .pxb-drawer-nested-nav-item {
-            background-color: map-get($pxb-gray, 50);
-        }
-
-        .pxb-info-list-item .mat-list-item-content {
-            color: map-get($foreground, text);
-        }
-
-        .pxb-info-list-item .mat-list-item-content:hover {
-            background-color: map-get($pxb-gray, 100);
+        .pxb-drawer-nested-nav-item mat-expansion-panel {
+            background-color: map-get($pxb-white, 200);
         }
 
         .pxb-info-list-item-active .pxb-info-list-item .mat-list-item-content {
