--- a/angular/pxb-component-theme.scss
+++ b/angular/pxb-component-theme.scss
@@ -72,8 +72,10 @@
 @mixin pxb-drawer($theme) {
     $primary: map-get($theme, primary);
     $foreground: map-get($theme, foreground);
-
+    $background: map-get($theme, background);
     .pxb-drawer {
+        background-color: map-get($background, light);
+
         .pxb-drawer-header {
             background-color: mat-color($primary);
             color: map-get($foreground, light);
@@ -81,6 +83,18 @@
 
         .pxb-drawer-nav-group .mat-list-base {
             color: map-get($foreground, text);
+        }
+
+        .pxb-drawer-nested-nav-item mat-expansion-panel {
+            background-color: map-get($background, background);
+        }
+
+        .pxb-info-list-item-active .pxb-info-list-item .mat-list-item-content {
+            color: map-get($primary, 500);
+        }
+
+        .pxb-info-list-item-active:after {
+            background-color: map-get($primary, 50);
         }
     }
 }
